# dm-motor-python

./: .gitignore  LEARNING_NOTES.md  README.md  TROUBLESHOOTING.md  dm_sdk.py  gripper_friction.json  probe_5m_fd.py  probe_one.py  probe_runner.sh  pyproject.toml  read_motor_state.py  set_baud_5m.py  test_motor.py  test_motor_5m.py  test_motor_5m_mit.py
.claude/: settings.json
docs/: CHANGELOG.md  control_report.md  gripper_design.md  learning_notes.html
examples/: canfd_mit.py  canfd_vel.py  classic_can_mit.py  gripper_demo.py
src/dm_gripper/: __init__.py  calibration.json  gripper.py
src/dm_motor/: __init__.py  gripper.py  lugre.py  sdk.py
tools/: diagnose_gripper.py  find_stable_kp.py  identify_friction.py  plot_tracking.py  probe_5m_fd.py  probe_baudrate.py  probe_one.py  read_params.py  set_baud.py  speed_sweep.py  tune_gripper.py
