[project]
name = "dm-motor"
version = "0.4.0"
description = "DM4310 gripper SDK + motor control library"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dm_gripper = ["*.json"]
